Fix z-index of sub navbar that was overlaping provinces dropdown

--- a/app/javascript/app/layouts/sections/sections-styles.scss
+++ b/app/javascript/app/layouts/sections/sections-styles.scss
@@ -27,6 +27,7 @@
   :global {
     .sticky-inner-wrapper {
       background-color: $dark-blue;
+      z-index: 4 !important; // override 3rd party attribute
     }
   }
 }
